fix alignwide, added some sass variables

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -30,8 +30,9 @@ $logo-width: 155px;/* Css width. Use @2x logo image. */
 
 $touch-menu-width: 250px;
 
-$spacing-content-element: 30px;
+$spacing-content-vertical: 30px;
+$spacing-content-horizontal: 30px;
 
-$content-width: 1040px;
+$max-content-width: 1040px;
 
 $breakpoint-touch-menu: 960px;
